Fixed syntax error

--- a/db/pong.lpc.html
+++ b/db/pong.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >comb_67</TD>
+<TD >ss</TD>
 <TD >10</TD>
 <TD >37</TD>
 <TD >0</TD>
@@ -25,22 +25,6 @@
 <TD >37</TD>
 <TD >37</TD>
 <TD >37</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >keybd</TD>
-<TD >5</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >9</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +48,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >gl|bc</TD>
+<TD >keybd</TD>
+<TD >5</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >9</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gl|bp</TD>
 <TD >9</TD>
 <TD >5</TD>
 <TD >0</TD>
@@ -80,7 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >gl|col</TD>
+<TD >gl|bcs</TD>
 <TD >46</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -96,7 +96,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >gl|c2</TD>
+<TD >gl|b2</TD>
 <TD >9</TD>
 <TD >5</TD>
 <TD >0</TD>
@@ -112,7 +112,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >gl|c1</TD>
+<TD >gl|b1</TD>
 <TD >9</TD>
 <TD >5</TD>
 <TD >0</TD>
@@ -144,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >r</TD>
+<TD >g</TD>
 <TD >69</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,7 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >p</TD>
+<TD >v</TD>
 <TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
